secANDprobesLAB/Sec/sa-demo-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-demo-1
  namespace: dev
spec:
  nodeName: minikube-m02
  serviceAccountName: app-sa
  containers:
  - name: app
    image: nginx:alpine
