secANDprobesLAB/Sec/sa-demo-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-demo-2
  namespace: dev
spec:
  nodeName: minikube-m03
  serviceAccountName: app-sa
  containers:
  - name: app
    image: nginx:alpine
